--- a/myshop/src/components/App.css
+++ b/myshop/src/components/App.css
@@ -10,13 +10,38 @@
   left: 13%;
 }
 
-.cardProducto {
-    width: 18rem;
-    margin: 4px;
+.cardBody {
+  background-color: white;
+  margin-bottom: 3px;
+  text-align: center;
 }
 
-.cardProducto {
+img {
+  margin-top:3px;
+}
+
+.cardProductos {
   margin: 4px;
   align-items: center;
   justify-content: center;
+}
+
+.cartWidget {
+  position: relative;
+  right: 3%;
+  color:white;
+}
+
+.nav-item {
+  margin: 10px;
+}
+
+.cantCarrito {
+  position: relative;
+  left: 15%;
+}
+
+.itemDetail {
+  max-width: 540px;
+  margin-top: 20px;
 }
