--- a/myshop/src/components/App.css
+++ b/myshop/src/components/App.css
@@ -1,47 +1,31 @@
-.tituloPrincipal {
-  background-color: #fcc193;
-  text-align: center;
-  margin: 3px;
-  font-size: 40px;
+.cartWidget {
+    position: relative;
+    left: 33%;
+    color: white;
 }
 
-.cantCarrito {
-  position:  relative;
-  left: 13%;
+.cantCarrito{
+    position: relative;
+    left: 13%;
+}
+.cardProducto {
+    width: 18rem;
+    margin: 4px;
+}
+
+
+.cardProductos {
+    margin: 4px;
+    align-items: center;
+    justify-content: center;
 }
 
 .cardBody {
-  background-color: white;
-  margin-bottom: 3px;
-  text-align: center;
+    background-color: white;
+    margin-bottom: 3px;
+    text-align: center;
 }
 
 img {
-  margin-top:3px;
-}
-
-.cardProductos {
-  margin: 4px;
-  align-items: center;
-  justify-content: center;
-}
-
-.cartWidget {
-  position: relative;
-  right: 3%;
-  color:white;
-}
-
-.nav-item {
-  margin: 10px;
-}
-
-.cantCarrito {
-  position: relative;
-  left: 15%;
-}
-
-.itemDetail {
-  max-width: 540px;
-  margin-top: 20px;
+    margin-top:3px;
 }
