--- a/myshop/src/components/App.css
+++ b/myshop/src/components/App.css
@@ -1,6 +1,5 @@
 .cartWidget {
     position: relative;
-    left: 3%;
     color: black;
 }
 
@@ -14,6 +13,7 @@
 .cardProducto {
     width: 18rem;
     margin: 4px;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 
