--- a/myshop/src/components/App.css
+++ b/myshop/src/components/App.css
@@ -1,5 +1,3 @@
-
-
 .cartWidget {
     position: relative;
     color: black;
@@ -15,9 +13,13 @@
 .nav-item {
     margin: 10px;
 }
+.nav-item a {
+    color:rgba(0, 0, 0, 0.616);
+}
+
 .cardProducto {
     width: 19rem;
-    margin: 2rem;
+    margin: 3rem;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -26,7 +28,6 @@
     margin: 4px;
     align-items: center;
     justify-content: center;
-    margin: 5px;
 }
 
 .cardBody {
@@ -36,21 +37,44 @@
 }
 
 img {
-    margin-top: 0.8rem;
+    margin-top: 3px;
 }
 
 .itemDetail {
-    max-width: 540px;
+    max-width: 40%;
     margin-top: 20px;
 }
 
 .darkMode {
-    background-color:rgba(0, 0, 0, 0.63);
-    color:rgb(204, 187, 162);
+    background-color:rgba(0, 0, 0, 0.616);
+    color:rgb(40, 59, 95);
 }
 
+
 .cardBodyDark {
-    background-color: hsl(0, 0%, 95%);
+    background-color: hsl(0, 4%, 95%);
     text-align: center;
-    
+    margin-bottom: 3px;
+}
+
+.imgBody {
+    display:block;
+    margin:auto;
+    max-height: 100%;
+}
+
+.cartContainer {
+    margin-top:3%;
+    margin-left: 26.5%;
+}
+
+.divButtons button{
+    margin:4px;
+}
+
+@media (max-width:991px) {
+    .cartWidget {
+        color:white;
+        margin-bottom: 10px;
+    }
 }
