--- a/myshop/src/components/Navbar/BotonDarkMode/BotonDarkMode.css
+++ b/myshop/src/components/Navbar/BotonDarkMode/BotonDarkMode.css
@@ -16,7 +16,7 @@
   }
   
   .slider {
-    background-color: #ccc;
+    background-color: rgb(192, 191, 191);
     bottom: 0;
     cursor: pointer;
     left: 0;
@@ -27,7 +27,7 @@
   }
   
   .slider:before {
-    background-color: #fff;
+    background-color: rgb(129, 129, 129);
     bottom: 4px;
     content: "";
     height: 26px;
@@ -38,7 +38,7 @@
   }
   
   input:checked + .slider {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.925);
   }
   
   input:checked + .slider:before {
